2011-04-26  Paul Eggert  <eggert@cs.ucla.edu>

	* keyboard.c (handle_user_signal): Fix pointer signedness problem.

	* gnutls.c (emacs_gnutls_handle_error): Remove unused local.
	(Fgnutls_boot): gnutls_certificate_verify_peers2 wants unsigned *.
	Remove unused local.
	(emacs_gnutls_write): Don't use uninitialized rtnval if nbyte <= 0.

	lisp.h: Fix a problem with aliasing and vector headers.  (Bug#8546)
	GCC 4.6.0 optimizes based on type-based alias analysis.  For
	example, if b is of type struct buffer * and v of type struct
	Lisp_Vector *, then gcc -O2 was incorrectly assuming that &b->size
	!= &v->size, and therefore "v->size = 1; b->size = 2; return
	v->size;" must therefore return 1.  This assumption is incorrect
	for Emacs, since it type-puns struct Lisp_Vector * with many other
	types.  To fix this problem, this patch adds a new type struct
	vectorlike_header that documents the constraints on layout of vectors
	and pseudovectors, and helps optimizing compilers not get fooled
	by Emacs's type punning.  It also adds the macros XSETTYPED_PVECTYPE
	XSETTYPED_PSEUDOVECTOR, TYPED_PSEUDOVECTORP, for similar reasons.
	* lisp.h (XSETTYPED_PVECTYPE): New macro, specifying the name of
	the size member.
	(XSETPVECTYPE): Rewrite in terms of new macro.
	(XSETPVECTYPESIZE): New macro, specifying both type and size.
	This is a bit clearer, and further avoids the possibility of
	undesirable aliasing.
	(XSETTYPED_PSEUDOVECTOR): New macro, specifying the size.
	(XSETPSEUDOVECTOR): Rewrite in terms of XSETTYPED_PSEUDOVECTOR.
	(XSETSUBR): Rewrite in terms of XSETTYPED_PSEUDOVECTOR and XSIZE,
	since Lisp_Subr is a special case (no "next" field).
	(ASIZE): Now uses header.size rather than size.  All
	previous uses of XVECTOR (foo)->size replaced to use this macro,
	to avoid the hassle of writing XVECTOR (foo)->header.size.
	(struct vectorlike_header): New type.
	(TYPED_PSEUDOVECTORP): New macro, also specifying the C type of the
	object, to help avoid aliasing.