@@ -1,3 +1,8 @@
+2011-04-27  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* nsmenu.m: Replace all uses of XVECTOR with ASIZE and AREF.
+	This makes this file independent of the recent pseudovector change.
+
 2011-04-26  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* keyboard.c (handle_user_signal): Fix pointer signedness problem.
